--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from pune,India</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Reading, hiking, trekking </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>become a succesful Application developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Katy,Texas</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I like to solve problems, implementing efficient solutions for web and web security</p>
     </section>
 
     <footer id="footer">
